Dependabot updates, resolved deprecation warnings, resolved error in integration test